tests/fail/negative_repeats.stderr
error: invalid digit found in string
 --> tests/fail/negative_repeats.rs:9:37
  |
9 |     let _wave = sine_wave!(repeats: -3);
  |                                     ^
